updated file parsing & deleted parser tests